# test-scope

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
examples/: api_tests.json  github_api_tests.json  github_https_tests.json  https_apis_tests.json
include/testscope/: assertions.hpp  http_client.hpp  json_parser.hpp  reporter.hpp  test_case.hpp  test_runner.hpp
src/: assertions.cpp  http_client.cpp  json_parser.cpp  reporter.cpp  test_case.cpp  test_runner.cpp
